# email_gateway

./: CMakeLists.txt  LICENSE  README
app/: email.lua  emailFetcher.lua
lib_email/: CMakeLists.txt
lib_email/src/: Email.c  Email.h  ImapConnection.c  SmtpConnection.c  SmtpConnection.h
lib_lua_email/: CMakeLists.txt
lib_lua_email/src/: EmailWrapper.c  test.c
lib_lua_email/test/: test.lua
lib_util/: CMakeLists.txt
lib_util/src/: CharBuffer.c  CharBuffer.h  MemoryRegion.c  MemoryRegion.h
src/app/: Email.c  Email.h  ImapConnection.c  ImapConnection.h  SmtpConnection.c  SmtpConnection.h  main.c
src/lib_util/: CharBuffer.c  CharBuffer.h  MemoryRegion.h
src/test/: MinUnit.h  main.c
unit_test/: CMakeLists.txt
unit_test/src/: main.c
